working on calender

--- a/schedulepage1.html
+++ b/schedulepage1.html
@@ -16,22 +16,41 @@
 <link href="https://fonts.googleapis.com/css2?family=BBH+Sans+Hegarty&family=Lobster&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
 <body>
-
     <section class="topsort">
+ 
     <button class="schedule">Schedule</button>
     <button class="note">Note</button>
-    </section>
+    </div>
+</section>
     <section class="calender">
-        <h2 class="month" style="display: inline;">Month</h2>
-        <h2 class="year" style="display: inline;">Year</h2>
+       <div class="monthyear">
+        <div class="monthDropdown">
+            <h2 class="month">Month</h2>
+            <ul class="monthList hidden">
+               <li>January</li>
+               <li>February</li>
+               <li>March</li>
+               <li>April</li> 
+               <li>May</li>
+               <li>June</li>
+               <li>July</li>
+               <li>August</li> 
+               <li>September</li> 
+               <li>October</li>
+               <li>November</li>
+               <li> December</li> 
+            </ul>
+         </div>
+        <h2 class="year">Year</h2>
+        </div>
         <section class="days">
-        SUN
-        MON
-        TUE
-        WED
-        THU
-        FRI
-         SAT
+        <div>SUN</div>
+        <div>MON</div>
+        <div>TUE</div>
+       <div>WED</div>
+        <div>THU</div>
+        <div>FRI</div>
+        <div> SAT</div>
         </section>
     <section class="dates"></section>
     </section>
