--- a/schedulepage1.html
+++ b/schedulepage1.html
@@ -14,36 +14,58 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=BBH+Sans+Hegarty&family=Lobster&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=BBH+Sans+Hegarty&family=Lobster&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <section class="topsort">
  
-    <button class="schedule">Schedule</button>
+    <button class="schedulebutton">Schedule</button>
     <button class="note">Note</button>
     </div>
-</section>
+    </section>
     <section class="calender">
        <div class="monthyear">
         <div class="monthDropdown">
             <h2 class="month">Month</h2>
             <ul class="monthList hidden">
-               <li>January</li>
-               <li>February</li>
-               <li>March</li>
-               <li>April</li> 
-               <li>May</li>
-               <li>June</li>
-               <li>July</li>
-               <li>August</li> 
-               <li>September</li> 
-               <li>October</li>
-               <li>November</li>
-               <li> December</li> 
+               <li>JANUARY</li>
+               <li>FEBRUARY</li>
+               <li>MARCH</li>
+               <li>APRIL</li> 
+               <li>MAY</li>
+               <li>JUNE</li>
+               <li>JULY</li>
+               <li>AUGUST</li> 
+               <li>SEPTEMBER</li> 
+               <li>OCTOBER</li>
+               <li>NOVEMBER</li>
+               <li>DECEMBER</li> 
             </ul>
          </div>
-        <h2 class="year">Year</h2>
+        <div class="yearDropdown">
+   <h2 class="year">2025</h2>
+   <ul class="yearList hidden">
+      <li>2020</li>
+      <li>2021</li>
+      <li>2022</li>
+      <li>2023</li>
+      <li>2024</li>
+      <li>2025</li>
+      <li>2026</li>
+      <li>2027</li>
+      <li>2028</li>
+      <li>2029</li>
+      <li>2030</li>
+   </ul>
+</div>
+
         </div>
-        <section class="days">
+     <section class="days">
         <div>SUN</div>
         <div>MON</div>
         <div>TUE</div>
@@ -52,8 +74,63 @@
         <div>FRI</div>
         <div> SAT</div>
         </section>
-    <section class="dates"></section>
+     <section class="dates"></section>
+
     </section>
+    <section class="schedulepage"> 
+  <div class="scheduleContainer">
+    
+    <div class="timeline"></div>
+
+ 
+    <div class="event">
+      <div class="circle">20</div>
+      <div class="eventCard">
+        <h4>Meeting with Anomali Team</h4>
+        <hr class="line">
+        <p><strong>Time:</strong> 07.00 am - 10.00 am</p>
+        <p><strong>Place:</strong> Anomali Office</p>
+        <p><strong>Notes:</strong> Nothing</p>
+      </div>
+    </div>
+
+    <div class="event">
+      <div class="circle">26</div>
+      <div class="eventCard">
+        <h4>Dinner with Anna</h4>
+        <hr class="line">
+        <p><strong>Time:</strong> 08.00 pm</p>
+        <p><strong>Place:</strong> Anna's House</p>
+        <p><strong>Notes:</strong> Don’t forget to bring flowers</p>
+      </div>
+    </div>    
+  </div>
+  <div class="addEvent">+</div>
+</section>
+<div class="hidden addEventPage">
+  <div class="addEventHeader">
+    <h3 class="backbutton">←</h3>
+    <h3 id="done">✔</h3>
+  </div>
+    <h4 class="schedule">Schedule</h4>
+    <input type="text" id="eventTitle">
+    <div>
+      <label for="scheduletoggle">Fullday</label>
+      <input id = "scheduletoggle" type="checkbox">
+    </div>
+    <div class="eventDetails">
+      <div class="startfrom">Start from:</div>
+      <div class="finish">Finish:</div>
+      <div>Repeat</div>
+      <div>Reminder</div>
+    </div>
+  <div class="eventExtras">
+    <input type="text" id="place" placeholder="Place">
+    <input type="text" id="notes" placeholder="Notes">
+  </div>
+</div>
+
+
         <script src="index.js"></script>
 </body>
 </html>
